# easy_ipc

./: .gitignore  Cargo.toml  LICENSE  README.md
derive/: Cargo.toml
derive/src/: lib.rs
easy_ipc/: Cargo.toml
easy_ipc/examples/: simple.rs
easy_ipc/src/: client.rs  connection.rs  error.rs  handlers.rs  lib.rs  macros.rs  model.rs  namespace.rs  server.rs  test.rs
easy_ipc_derive/: Cargo.toml
easy_ipc_derive/src/: lib.rs
easy_ipc_derive/tests/: derive.rs
example/full/app-cli/src/: main.rs
example/full/app-common/: Cargo.toml
example/full/app-common/src/: lib.rs
example/full/app-server/: Cargo.toml
example/full/app-server/src/: main.rs
example/simple/: Cargo.toml
example/simple/src/: main.rs
examples/: simple.rs
examples/calculator/calculator-cli/: Cargo.toml
examples/calculator/calculator-cli/src/: main.rs
examples/calculator/calculator-common/: Cargo.toml
examples/calculator/calculator-common/src/: lib.rs
examples/calculator/calculator-server/: Cargo.toml
examples/calculator/calculator-server/src/: main.rs
examples/full/: Cargo.toml
examples/full/app-cli/: Cargo.toml
examples/full/app-cli/src/: main.rs
examples/full/app-common/: Cargo.toml
examples/full/app-common/src/: lib.rs
examples/full/app-server/: Cargo.toml
examples/full/app-server/src/: main.rs
src/: client.rs  connection.rs  error.rs  lib.rs  main.rs  model.rs  packet.rs  server.rs  test.rs
tests/: derive.rs
