[package]
name = "easy_ipc"
version = "0.1.0"
edition = "2024"
authors = ["spencer3035 <spencer3035@gmail.com>"]
description = "Easy interprocess communication framework"
keywords = ["ipc", "interprocess"]
categories = ["encoding"]
homepage = "https://github.com/spencer3035/easy_ipc"
repository = "https://github.com/spencer3035/easy_ipc"
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
interprocess = "2.2.3"
bitcode = { version = "0.6.6", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.18"
easy_ipc_derive = { version = "0.1", path = "../easy_ipc_derive/" }
dirs = "6.0.0"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.172"
users = "0.11.0"

[dev-dependencies]
