[package]
name = "easy_ipc_derive"
version = "0.1.0"
edition = "2024"
authors = ["spencer3035 <spencer3035@gmail.com>"]
description = "Easy interprocess communication framework"
keywords = ["ipc", "interprocess"]
categories = ["encoding"]
homepage = "https://github.com/spencer3035/easy_ipc"
repository = "https://github.com/spencer3035/easy_ipc"
readme = "../README.md"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.103", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
easy_ipc = { path = "../easy_ipc/" }
