[package]
name = "calculator-common"
version = "0.1.0"
edition = "2024"
authors = ["spencer3035 <spencer3035@gmail.com>"]
description = "Easy interprocess communication framework"
keywords = ["ipc", "interprocess"]
categories = ["encoding"]
homepage = "https://github.com/spencer3035/easy_ipc"
repository = "https://github.com/spencer3035/easy_ipc"
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
easy_ipc = { path = "../../../easy_ipc" }
serde = { version = "1.0.219", features = ["derive"] }
